# nhwc_compiler

./: -  -.s  .gitignore  .gitmodules  .swp  .vscode-ctags  05_arr_defn4.nhwc  06_const_var_defn2.nhwc  11_add2.nhwc  22_if_test3.nhwc  29_break.nhwc  32_many_params3.c.orig  39_fp_params.c.orig  49_if_complex_expr.nhwc  51_short_circuit3.nhwc  Cargo.toml  README.md  a  a.s  auto_test  auto_test_performance  copy_in_files.sh  creduce_sy  demo.bc  demo.c  demo.ll  demo1.c  demo1.nhwc  demo2.c  demo2.nhwc  demo_1for.nhwc  demo_1while.nhwc  demo_array.nhwc  demo_array.s  demo_array_arg.nhwc  demo_array_arg.s  demo_calculate.nhwc  demo_declaration.nhwc  demo_expr.nhwc  demo_fibonacci.nhwc  (+28 more)
asms/: demo_fibonacci  fibo  fibo.s  hello  hello.asm  hello.s  readme.md  run_riscv.sh  whatToDo.md
assembly_repo/: demo_fibonacci.s
demo_llvm/: demo.c  demo.ll  demo_opt.bc  demo_opt.ll  demo_opt.rv64  llvmIR.md
demos/: demo.c  demo1.c  demo2.c  demo_1for.c  demo_1while.c  demo_2for.c  demo_2while.c  demo_array.c  demo_array_arg.c  demo_assign.c  demo_break.c  demo_calculate.c  demo_call.c  demo_cast.c  demo_cond.c  demo_declaration.c  demo_def.c  demo_empty_while_for.c  demo_equality.c  demo_expr.c  demo_fibonacci.c  demo_for.asm  demo_for.c  demo_function_with_args.c  demo_i2f.c  demo_if.c  demo_oxnum.c  demo_scope.c  demo_static.c  demo_str.c  demo_while.c
demos/runtime/: defs.h
demos/ssa_test/: func_def_array.c  global_def_array.c  ptr_arg_func.c
llvm/: c2s.sh  demo  demo.c  demo.ll  demo.s  demo_before.s  example  example.ll  example.s  llvmIR.md  optimized_example.ll
llvm_repo/: demo_fibonacci.ll
report/: 汇报.doc  汇报.md
rt/: builtin.S  defs.h
src/: main.rs  tests.rs
src/antlr_parser/: C.g4  (+12 more)
(+276 files in other folders)
