[package]
name = "beginner_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
antlr-rust = "0.3.0-beta"
clap = { version = "4.4.6", features = ["derive"] }
petgraph = "0.6.4"
syn = "1"
derive_builder = "0.13.0"