[package]
name = "beginner_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
antlr-rust = "0.3.0-beta"
clap = { version = "4.4.6", features = ["derive"] }
petgraph = "0.6.4"
syn = "1"
derive_builder = "0.13.0"
eval = "0.4.3"
casey = "0.4.0"
paste = "1.0.14"
anyhow = "1.0.81"
slab = "0.4.9"
colored = "2.1.0"
strum = "0.26.2"
derive-new = "0.6.0"
strum_macros = "0.26.2"
ahash = "0.8.11"
delegate = "0.12.0"
